--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
     "next": "15.3.4",
