--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@apollo/client-integration-nextjs": "^0.12.2",
     "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
+    "graphql": "^16.11.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
